# algo1-tpi

./: CMakeLists.txt  README.md  salida.txt
include/: atleta.h  competencia.h  jjoo.h  tipos.h
src/: atleta.cpp  competencia.cpp  entrada.txt  jjoo.cpp  main.cpp  ojota.cpp  tipos.cpp
tests/: CMakeLists.txt  atleta_tests.cpp  auxiliares_tests.h  competencia_tests.cpp  jjoo_tests.cpp
